# e2efast-project-example

./: README.md  pyproject.toml
framework/clients/http/petstore/: pet_client.py  store_client.py  user_client.py
framework/fixtures/: __init__.py
framework/fixtures/http/: __init__.py  base.py  petstore_service.py
framework/settings/: base_settings.py
internal/clients/http/petstore/: __init__.py
internal/clients/http/petstore/apis/: pet_api.py  store_api.py  user_api.py
internal/clients/http/petstore/models/: api_models.py
tests/: conftest.py
tests/http/petstore/pet/: test_delete_pet_pet_id.py  test_get_pet_find_by_status.py  test_get_pet_find_by_tags.py  test_get_pet_pet_id.py  test_post_pet.py  test_post_pet_pet_id.py  test_post_pet_pet_id_upload_image.py  test_put_pet.py
tests/http/petstore/store/: test_delete_store_order_order_id.py  test_get_store_inventory.py  test_get_store_order_order_id.py  test_post_store_order.py
tests/http/petstore/user/: test_delete_user_username.py  test_get_user_login.py  test_get_user_logout.py  test_get_user_username.py  test_post_user.py  test_post_user_create_with_list.py  test_put_user_username.py
