[tool.poetry]
name = "e2efast-project-example"
version = "0.1.0"
description = ""
authors = ["Menshikov Valeriy Sergeevich <vmenshikov@ozon.ru>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
e2efast = "0.2.2"
pytest = "^9.0.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
