[tool.poetry]
name = "e2efast-project-example"
version = "0.1.0"
description = ""
authors = ["Menshikov Valeriy Sergeevich <vmenshikov@ozon.ru>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
pytest = "^9.0.1"
pydantic-settings = "^2.12.0"
e2efast = {git = "https://github.com/ValeriyMenshikov/e2efast.git"}


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
